<resources>
    <string name="app_name">CeresLimit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ceres Limit</string>
    <string name="nav_header_subtitle">¡Gracias por usar Ceres Limit!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_categorias">Mis Categorias</string>
    <string name="menu_favoritos">Mis Favoritos</string>

    <string name="menu_busquedaAvanzada">Búsqueda Avanzada</string>
    <string name="menu_reservas">Mis Reservas</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet nisl id quam aliquam porttitor a at ligula. Nunc sed turpis eu lectus porttitor laoreet id quis tortor. Aenean porta dui lectus, fermentum tempus sapien scelerisque ut. Praesent non odio velit. Phasellus condimentum nisl quis diam condimentum, ac faucibus quam suscipit. Donec at mi ut ante ultricies ornare venenatis quis ipsum. Nam placerat finibus justo, eu suscipit tellus. Praesent sollicitudin libero leo, malesuada pretium sem vulputate id.  Vestibulum eu interdum enim, ac accumsan elit. Sed rhoncus felis a felis bibendum, ut auctor lectus feugiat. Mauris quis lorem sit amet arcu suscipit semper at nec dolor. Suspendisse gravida risus mauris, ac suscipit diam imperdiet a. Sed elit tellus, hendrerit ac volutpat eu, viverra eu dui.</string>
    <string name="comentar">Comentar</string>
    <string name="descripcion_local">Descripción</string>
    <string name="nombre_reserva">Nombre de la reserva</string>
    <string name="selecciona_fecha">Selecciona una fecha</string>
    <string name="selecciona_hora">Selecciona una hora</string>
    <string name="confirmar">Confirmar</string>
    <string name="comentarios">Comentarios</string>
    <string name="aforo">Aforo</string>
    <string name="porcentaje_ejemplo">85%</string>
    <string name="desc_favorito">Añadir o quitar local de favoritos</string>
    <string name="nombre_local">TITULO DEL SITIO</string>
    <string name="desc_reservar">Realizar una reserva</string>
    <string name="desc_ratingbar">Valoración del local</string>
    <string name="resena">Dejar una reseña</string>
    <string name="hint_comentario">Escribe un comentario sober el local</string>

    <string-array name="categorias_ejemplo">
        <item>Burgers</item>
        <item>Romántico</item>
        <item>Family</item>
        <item>Party!!!</item>
    </string-array>

    <string name="titulo_iconos">Selecciona un icono para la nueva categoría</string>
    <string name="titulo_nombre_categoria">Escribe un nombre para la nueva categoría</string>
    <string name="nombre_categoria_hint">Mejores bocatas</string>
    <string name="crear_categoria">Crear Categoria</string>
    <string name="selecciona_color">Selecciona un color para la nueva categoria</string>
    <string name="sincomentarios">¡No has hecho ningún comentario aún!</string>
    <string name="sinValoracion">Aún no has valorado el local</string>
    <string name="desc_eliminarCat">Eliminar local de la categoría</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="NombreDelUsuario">Nombre de usuario</string>
    <string name="etP_nombreUsuario">Tu nombre</string>
    <string name="Mapa">Configuración del Mapa</string>

</resources>