<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detalles.DetallesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck">

            <ImageView
                android:id="@+id/iv_backgroundLocal"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/background_fast_food" />
            <ImageButton
                android:id="@+id/ib_detalles_favorito"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="@id/iv_backgroundLocal"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="15dp"
                android:src="@drawable/icono_nofav"
                app:tint="@color/rosewood"
                android:background="@drawable/border_circle"
                app:circularflow_defaultRadius="10dp"
                android:contentDescription="@string/desc_favorito"/>
            <ImageButton
                android:id="@+id/ib_detalles_categoria"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/iv_backgroundLocal"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/icono_add_categoria"
                app:tint="@color/rosewood"
                android:background="@drawable/border_circle"
                app:circularflow_defaultRadius="10dp"
                android:contentDescription="@string/desc_favorito"/>
            <ImageView
                android:id="@+id/iv_logoLocal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@color/rosewood"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_backgroundLocal"
                app:layout_constraintEnd_toEndOf="@id/iv_backgroundLocal"
                app:layout_constraintStart_toStartOf="@id/iv_backgroundLocal"
                android:src="@drawable/burger_king" />
            <TextView
                android:id="@+id/tv_nombreLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre_local"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_backgroundLocal" />
            <RatingBar
                android:id="@+id/ratingbar_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_nombreLocal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:contentDescription="@string/desc_ratingbar"
                android:isIndicator="true"/>
            <TextView
                android:id="@+id/sinValoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sinValoracion"
                app:layout_constraintTop_toBottomOf="@id/ratingbar_local"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/tv_aforo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ratingbar_local"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/aforo"
                android:textSize="25sp"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                style="@style/CircularDeterminateProgressBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aforo"
                tools:progress="90"/>

            <TextView
                android:id="@+id/tv_detalles_numaforo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                app:layout_constraintStart_toStartOf="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@+id/tv_aforo"
                android:text="@string/porcentaje_ejemplo"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/b_resena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/resena"/>

            <TextView
                android:id="@+id/tv_titulo_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/b_resena"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:text="@string/descripcion_local"
                android:layout_marginTop="20dp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv_descipcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_desc"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/border_rounded" />

            <TextView
                android:id="@+id/tv_titulo_comen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_descipcion"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:text="@string/comentarios"
                android:layout_marginTop="20dp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv_detalles_5mentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_comen"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="30dp"
                android:text="@string/sincomentarios"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_detalles_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_comen"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="#F0F0F0"
                android:paddingBottom="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_nombre_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Usuario"
                    android:textColor="@color/rosewood"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/tv_cuerpo_comentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="Contenido del comentario, puede haber cualquier cosa."
                    android:textStyle="italic"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_reservar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/icono_reservas"
            android:contentDescription="@string/desc_reservar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>