<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resena.ResenaFragment">

    <ImageView
        android:id="@+id/iv_backgroundLocal"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/iv_logoLocal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@color/rosewood"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_backgroundLocal"
        app:layout_constraintEnd_toEndOf="@id/iv_backgroundLocal"
        app:layout_constraintStart_toStartOf="@id/iv_backgroundLocal"
        android:src="@drawable/ic_launcher_foreground" />
    <TextView
        android:id="@+id/tv_nombreLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TITULO DEL SITIO"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_backgroundLocal"/>
    <RatingBar
        android:id="@+id/ratingbar_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nombreLocal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_ratingbar"
        />

    <EditText
        android:id="@+id/et_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_comentario"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingbar_local" />

    <Button
        android:id="@+id/b_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_comentario"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/confirmar"
        android:textSize="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>