<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.categorias.CrearCategoriaFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_crearcategoria_titulo_nombrecat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/titulo_nombre_categoria"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/et_crearcategoria_nombrecat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:minEms="12"
            android:layout_marginVertical="20dp"
            android:inputType="text"
            android:hint="@string/nombre_categoria_hint"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_crearcategoria_titulo_iconos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/titulo_iconos"
            android:textSize="16sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_crearcategoria_iconos"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"/>
        <TextView
            android:id="@+id/tv_crearcategoria_titulo_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/selecciona_color"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_crearcategoria_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_indigo_dye"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_blue_shappire"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_zomp"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_pistachio"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_red_salsa"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_orange_red"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_maize_crayola"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_ultra_red"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/crearcategoria_chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:chipBackgroundColor="@color/cat_dark_orchid"
                    android:checkable="true"/>

            </com.google.android.material.chip.ChipGroup>


        </HorizontalScrollView>

        <Button
            android:id="@+id/b_crearcategoria_confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_categoria"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="80dp"/>

    </LinearLayout>
</ScrollView>